k8s-michal/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodejs-backend
  namespace: "monitoring-progress-michal"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodejs-backend
    spec:
      containers:
        - name: nodejs-backend
          image: apociejowski/monitoring-progress-backend
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3000
