k8s-michal/couchdb.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: couchdbmichal
  namespace: "monitoring-progress-michal"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdbmichal
    spec:
      containers:
        - name: couchdbmichal
          image: couchdb:3.0.0
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5984
          volumeMounts:
            - mountPath: /opt/couchdb/data
              name: couchdbmichal
      volumes:
        - name: couchdbmichal
          persistentVolumeClaim:
            claimName: couchdb-pv-claim-hawek
---
apiVersion: v1
kind: Service
metadata:
  name: couchdbmichal
  namespace: "monitoring-progress-michal"
  labels:
    app: couchdbmichal
spec:
  type: ClusterIP
  ports:
    - port: 5984
  selector:
    app: couchdbmichal
