k8s-michal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-backend
  namespace: "monitoring-progress-michal"
  labels:
    app: nodejs-backend
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: nodejs-backend
